[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/InGameTheme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Game/FailState.gd" type="Script" id=2]

[node name="FailState" type="Node2D"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 155.0
margin_right = 962.0
margin_bottom = 539.0
theme = ExtResource( 1 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InsultLabel" type="Label" parent="VBoxContainer"]
margin_right = 960.0
margin_bottom = 38.0
text = "Good job, asshole."
align = 1

[node name="FailReasonLabel" type="Label" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 960.0
margin_bottom = 96.0
text = "FAIL RESON"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 960.0
margin_bottom = 160.0
alignment = 1

[node name="TryAgainButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 400.0
margin_right = 560.0
margin_bottom = 44.0
text = "Try Again"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
